--- a/Bierman.UiToolkit/Windows/TextBoxWindow.xaml
+++ b/Bierman.UiToolkit/Windows/TextBoxWindow.xaml
@@ -18,8 +18,9 @@
                 <RowDefinition Height="32"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="1" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBox Width="285" x:Name="txtText" Text="{Binding Text}" />
+            <StackPanel Grid.Row="1" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"
+                        FocusManager.FocusedElement="{Binding ElementName=txtText}">
+                <TextBox Width="285" TabIndex="0" x:Name="txtText" Text="{Binding Text}" />
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <Button Click="Confirm"
                          IsDefault="true">
