--- a/Bierman.UiToolkit/Windows/ErrorWindow.xaml
+++ b/Bierman.UiToolkit/Windows/ErrorWindow.xaml
@@ -27,7 +27,7 @@
                         TextWrapping="WrapWithOverflow"/>
                 </ScrollViewer>
                 <Button Click="Confirm"
-                        IsDefault="true" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                         Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock Padding="3" FontFamily="Segoe MDL2 Assets" Text="&#xF78C;" FontSize="16" VerticalAlignment="Center"/>
                 </Button>
             </StackPanel>
